--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <div class="header">
 	<div class="logoleft"> </div>
 	<div class="headerlogo"> 
-		<img src="img/Shikhbe-shobai-logo.png" align="logo" width="110" ">
+		<img src="img/Shikhbe-shobai-logo.png" align="logo" width="110">
 	</div>
 	
 	<div class="menu"> 
@@ -28,7 +28,7 @@
 	</div>
 </div>
 
-		<img src="img/contactform.png" width="1920" alt="contact page">
+		<img src="img/contactform.png" style="width: 100%;" alt="contact page">
 
 
 
