--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <div class="header">
 	<div class="logoleft"> </div>
 	<div class="headerlogo"> 
-		<img src="img/Shikhbe-shobai-logo.png" align="logo" width="110">
+		<img src="img/Shikhbe-shobai-logo.png" alt="logo" width="110">
 	</div>
 	
 	<div class="menu"> 
@@ -63,18 +63,7 @@
 			<li> <a href="https://www.youtube.com/channel/UCeqXDKY2BjqbwkjStzz94gQ/" target="blank" style="color: white;"> Youtube </a> </li>
 		</ul>
 	</div>
-
-	
-
 </div>
 
-
-
-
-
-
 </body>
-
-
-
 </html>
