--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 	</div>
 </div>
 
-		<img src="img/contactform.png" style="width: 100%;" alt="contact page">
+		<img src="img/contactform.png" style="height: 100%; width: 100%;" alt="contact page">
 
 
 
