--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,41 @@
 	</div>
 </div>
 
-		<img src="img/contactform.png" style="height: 100%; width: 100%;" alt="contact page">
+		
 
+
+<div class="contactwrapper">
+
+	<div class="contactwrapperleft"> </div>
+	
+	<div class="contacth1">
+		<h1> Contact us </h1>
+	</div>	
+	
+
+	<div class="namewrapper">
+		<h1> Name </h1>
+		<div class="firstname"></div>
+		<div class="lastnameleft"></div>
+		<div class="lastname"></div>
+	</div>
+
+
+
+
+	<div class="emailwrapper">
+		<h1> Email </h1>
+		<div class="email"></div>
+	</div>	
+
+	<div class="commentwrapper">
+		<h1> Comment </h1>
+		<div class="comment"></div>
+	</div>
+
+
+
+</div>
 
 
 
@@ -63,7 +96,18 @@
 			<li> <a href="https://www.youtube.com/channel/UCeqXDKY2BjqbwkjStzz94gQ/" target="blank" style="color: white;"> Youtube </a> </li>
 		</ul>
 	</div>
+
+	
+
 </div>
 
+
+
+
+
+
 </body>
+
+
+
 </html>
