--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li class="li"> <a href="service.html"> Service </a> </li> 
 			<li class="li"> <a href="portfolio.html"> Portfolio </a> </li>
 			<li class="li"> <a href="contact.html"> Contact </a> </li>
+			<li class="li"> <a href="tagpractice.html"> TagPractice </a> </li>
 		</ul>
 	</div>
 </div>
@@ -215,7 +216,8 @@
 			<li> <a href="about.html" style="color: white;"> About </a> </li> <br>
 			<li> <a href="service.html" style="color: white;"> Service </a> </li> <br> 
 			<li> <a href="portfolio.html" style="color: white;"> Portfolio </a> </li> <br>
-			<li> <a href="contact.html" style="color: white;"> Contact </a> </li>
+			<li> <a href="contact.html" style="color: white;"> Contact </a> </li> <br>
+			<li> <a href="tagpractice.html" style="color: white;"> TagPractice </a> </li>
 		</ul>	
 	</div>
 	
